# vicking

./: pyproject.toml
examples/: detector.py  player_detection.py  test_player_detection_puml.py  usbcamera.py  videodisplayer.py
vicking/components/: __init__.py
vicking/components/calibration/: posture_projection_map.py  projection_map.py
vicking/components/data/: data_builder.py  data_manager.py  data_reader.py  data_writer.py
vicking/components/detection/: detector.py  haarcascade_detector.py  openpifpaf_detector.py  yolov5_detector.py
vicking/components/display/: opencv_displayer.py
vicking/components/draw/: draw.py  frame_builder.py
vicking/components/media/: capture.py  image.py  recorder.py  usb_camera.py  video.py
vicking/components/tracker/: iou_tracker.py  tracker.py
vicking/data/: frame_data.py
vicking/models/: prediction.py  trajectory.py
vicking/projects/: __init__.py  project.py  project_lecture_mode.py
