[tool.poetry]
name = "vicking"
version = "0.0.0"
description = "A computer vision framework to manage frame data processing pipelines, based on River and opencv."
authors = ["Anatole-DC <adechauveron@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.7.0.72"
opencv-contrib-python = "^4.7.0.72"
torch = "1.13.1"
tinydb = "^4.7.1"
cvermeer = {path = "../opencvermeer"}
river = {path = "../river"}

[tool.poetry.group.posture.dependencies]
openpifpaf = "^0.13.11"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"


[tool.poetry.group.yolo.dependencies]
pandas = "^2.0.2"
psutil = "^5.9.5"
pyyaml = "^6.0"
tqdm = "^4.65.0"
ultralytics = "^8.0.119"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
